# voice-assistant-app

./: .gitignore  ARCHITECTURE.md  DEPLOYMENT.md  README.md  build.gradle  create_test_audio.py  gradle.properties  gradlew  gradlew.bat  local.properties  secrets.properties.example  settings.gradle
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/: download_silero_vad.md
app/src/main/cpp/: CMakeLists.txt  audio_processor.cpp  audio_processor.h  jni_interface.cpp  whisper_simple.h
app/src/main/cpp/vad/: energy_vad.cpp  vad.cpp  vad.h
app/src/main/cpp/whisper/: ggml-alloc.cpp  ggml-backend.cpp  ggml-quants.cpp  ggml.cpp  whisper.cpp  whisper.h
app/src/main/java/com/voiceassistant/app/: VoiceAssistantApplication.kt
app/src/main/java/com/voiceassistant/app/data/api/: OpenAiApi.kt
app/src/main/java/com/voiceassistant/app/data/repository/: AudioRecorderRepository.kt  FaceDetectionRepositoryImpl.kt  SileroVadRepository.kt  SpeechRepositoryImpl.kt  VadRepositoryImpl.kt  WhisperNativeRepository.kt
app/src/main/java/com/voiceassistant/app/di/: NetworkModule.kt  RepositoryModule.kt
app/src/main/java/com/voiceassistant/app/domain/model/: VoiceAssistantState.kt
app/src/main/java/com/voiceassistant/app/utils/: ModelDownloader.kt  VadTestHelper.kt
app/src/main/res/drawable/: ai_message_background.xml  user_message_background.xml
app/src/main/res/layout/: activity_main.xml  item_conversation.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/xml/: network_security_config.xml
(+7 files in other folders)
